--- a/src/app.scss
+++ b/src/app.scss
@@ -1,59 +1,39 @@
-html, 
-body {user-select:none; height:100%; font-size:16px; font-family:"Roboto",arial,helvetica,sans-serif; line-height:1.42857143; color:$primary-font-color; background-color:$body-background-color; overflow:hidden}
+// SASS style sheet */
+// Palette color codes */
+// Palette URL: http://paletton.com/#uid=73y220kllllc3MRgHtEpZd1uC4J */
 
-/***********  COMPONENTS ************/
-/* scrollbar */
-::-webkit-scrollbar-track-piece {background-color:#fff; -webkit-border-radius:0}
-::-webkit-scrollbar {width:8px;	height:8px}
-::-webkit-scrollbar-thumb {height:50px;	background-color:#999; -webkit-border-radius:4px; outline:2px solid #fff; outline-offset:-2px; border: 2px solid #fff}
-::-webkit-scrollbar-thumb:hover {height:50px; background-color:#9f9f9f;	-webkit-border-radius:4px}
+// Feel free to copy&paste color codes to your application */
 
 
-/* button */
-.btn-block {width:100%}
+// As hex codes */
 
-.btn.btn-transparent,
-.btn.btn-transparent:active {background-color:$button-transparent-background-color !important; color:$button-transparent-font-color; border:none; box-shadow:none}
-.btn.btn-transparent:hover {background-color:$button-transparent-background-color; color:$button-transparent-font-color-hover; border:none; box-shadow:none}
+$color-primary-0: #2A4F6E;	// Main Primary color */
+$color-primary-1: #8CB5D7;
+$color-primary-2: #4E7798;
+$color-primary-3: #102C43;
+$color-primary-4: #030E18;
 
-.btn.btn-action,
-.btn.btn-action:active{background-color:$button-action-background-color !important; color:$button-font-color}
-.btn.btn-action:hover {background-color:$button-action-background-color-hover !important; color:$button-font-color}
+$color-secondary-1-0: #A43741;	// Main Secondary color (1) */
+$color-secondary-1-1: #FB9DA6;
+$color-secondary-1-2: #E46D79;
+$color-secondary-1-3: #64131B;
+$color-secondary-1-4: #240205;
 
-.btn.btn-cancel,
-.btn.btn-cancel:active {background-color:$button-cancel-background-color !important; color:$button-font-color}
-.btn.btn-cancel:hover {background-color:$button-cancel-background-color-hover !important; color: $button-font-color}
+$color-secondary-2-0: #408E2F;	// Main Secondary color (2) */
+$color-secondary-2-1: #A3EC93;
+$color-secondary-2-2: #70C55E;
+$color-secondary-2-3: #1D5710;
+$color-secondary-2-4: #071F01;
 
-.btn.btn-primary,
-.btn.btn-primary:active {background-color:$button-primary-background-color !important; color: $button-font-color}
-.btn.btn-primary:hover {background-color:$button-primary-background-color-hover !important; color:$button-font-color}
+$color-complement-0: #AA7A39;	// Main Complement color */
+$color-complement-1: #FFD79F;
+$color-complement-2: #ECB871;
+$color-complement-3: #684414;
+$color-complement-4: #261602;
 
-.btn.btn-secondary,
-.btn.btn-secondary:active {background-color:$button-secondary-background-color !important; color: $button-secondary-font-color}
-.btn.btn-secondary:hover {background-color:$button-secondary-background-color-hover !important}
-
-/***********  APPLICATION ************/
-.ce-app {height:100%}
-.ce-module {height:100%; position:relative}
-.ce-page {height: 100%}
-
-/** Fixing issue with the check boxes and radio buttons when the
- elements are in a scrollable element with overflow hidden**/
-[type="radio"]:not(:checked),
-[type="radio"]:checked,
-[type="checkbox"]:not(:checked),
-[type="checkbox"]:checked
-{
-    position: absolute;
-    left: -9999px;
-    visibility: hidden;
+html,
+body {
+    padding: 0;
+    margin: 0;
+    font-size: 8pt;
 }
-[type="checkbox"] + label {line-height:20px !important; height:20px !important; top:3px}
-
-/** class to be used on links that need to look as disabled*/
-.disabled {cursor:not-allowed !important; opacity:0.4; pointer-events:none !important}
-.disabled:hover {background: initial}
-
-/** takes care of darkening the background when the dialog is open and when the app is in a navigation state*/
-ai-dialog-overlay.active {background-color:rgba(0,0,0,0.5);}
-.overlay{width: 100%; height: 100%; position: fixed; background-color: rgba(0,0,0,0.5); top:0; left:0; z-index: 10000; color: white !important}
